syntax = "proto3";

package order.v1;

option go_package = "./protobuf/order/v1";

import "google/protobuf/timestamp.proto";

// BUY or SELL side of an order
enum Side {
  SIDE_UNSPECIFIED = 0;
  SIDE_BUY  = 1;
  SIDE_SELL = 2;
}

// Optional: how long a Limit Order remains active
enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_GTC = 1; // Good‑Till‑Cancelled
  TIME_IN_FORCE_IOC = 2; // Immediate‑Or‑Cancel
  TIME_IN_FORCE_FOK = 3; // Fill‑Or‑Kill
}

// ----- Order Request Messages -------------------------------------------

message PlaceMarketOrderRequest {
  string symbol  = 1;               // e.g. "BTCUSDT"
  Side   side    = 2;               // BUY or SELL
  string quantity = 3;              // base‑asset size
}

message PlaceLimitOrderRequest {
  string symbol        = 1;
  Side   side          = 2;
  string quantity      = 3;
  string price         = 4;         // limit price
  TimeInForce tif      = 5;         // time‑in‑force (optional)
}

message PlaceStopMarketOrderRequest {
  string symbol      = 1;
  Side   side        = 2;
  string quantity    = 3;
  string stop_price  = 4;           // trigger price for the stop
}

// ----- Generic Response ---------------------------------------------------

message PlaceOrderResponse {
  string order_id    = 1;           // exchange‑assigned order ID
  string client_oid  = 2;           // echoed client‑provided ID (optional)
  string status      = 3;           // initial status, e.g. "NEW"
  int64  accepted_at = 4;           // server timestamp (epoch ms)
}

// ----- Service Definitions -----------------------------------------------

// Spot market orders (e.g. BTC/USDT)
service BinanceOrderService {
  rpc PlaceMarketOrder      (PlaceMarketOrderRequest)      returns (PlaceOrderResponse);
  rpc PlaceLimitOrder       (PlaceLimitOrderRequest)       returns (PlaceOrderResponse);
  rpc PlaceStopMarketOrder  (PlaceStopMarketOrderRequest)  returns (PlaceOrderResponse);
}

// Perpetual futures orders (e.g. BTCUSDT‑PERP)
service BinancePerpOrderService {
  rpc PlaceMarketOrder      (PlaceMarketOrderRequest)      returns (PlaceOrderResponse);
  rpc PlaceLimitOrder       (PlaceLimitOrderRequest)       returns (PlaceOrderResponse);
  rpc PlaceStopMarketOrder  (PlaceStopMarketOrderRequest)  returns (PlaceOrderResponse);
}
